fix: correct spacing when line is highlighted

--- a/packages/ui/src/infrastructure/prism-code.css
+++ b/packages/ui/src/infrastructure/prism-code.css
@@ -67,10 +67,11 @@
     @apply text-base;
 
     .refractor-marker {
-      @apply relative left-0 right-0 block pl-5 -mx-4 whitespace-pre border-l-4 pointer-events-none;
+      @apply relative left-0 right-0 block -mx-4 whitespace-pre border-l-4 pointer-events-none;
+      @apply border-secondary;
+      padding-left: 0.8em;
       line-height: inherit;
       background-color: var(--mono-3);
-      @apply border-secondary;
     }
   }
 }
